# RFIDtools

./: .gitignore  .gitmodules  README.en.md  README.md  build.gradle  gradle.properties  import-summary.txt  settings.gradle  update_note.txt
libcrapto1/src/main/cpp/: CMakeLists.txt  main.c
libnfc/src/main/cpp/mfoc/: CMakeLists.txt  crapto1.c  mfoc.c  mfoc.h
libnfc_pn53x/src/main/cpp/libnfc/: CMakeLists.txt  conf.c  log.c  nfc-device.c  nfc-emulation.c  nfc-internal.c  nfc-utils.c  nfc.c
libnfc_pn53x/src/main/cpp/libnfc/buses/: com_uart.c  uart_posix.c
libnfc_pn53x/src/main/cpp/libnfc/chips/: pn53x.c
libnfc_pn53x/src/main/cpp/libnfc/drivers/: acr122_usb.c  pn532_uart.c  pn53x_usb.c
libnfc_pn53x/src/main/cpp/libnfc/include/: config.h  log.h  nfc-internal.h  uart.h
libnfc_pn53x/src/main/cpp/mfcuk/: CMakeLists.txt  crapto1.c  mfcuk.c  mfcuk_finger.c  mifare.c
libnfc_pn53x/src/main/cpp/mfcuk/include/: crapto1.h  mfcuk_mifare.h
mfkey/src/main/cpp/: CMakeLists.txt  crapto1.c  mfkey.h  mfkey32.c  mfkey32v2.c  mfkey64.c  tools.c  tools.h
pm3flasher/src/main/cpp/: CMakeLists.txt
pm3flasher/src/main/cpp/client/: comms.c  fileutils.h  flash.c  proxmark3.c  ui.c
pm3flasher/src/main/cpp/client/mifare/: ndef.c
pm3flasher/src/main/cpp/client/uart/: com.h  uart_posix.c
pm3iceman/src/main/cpp/: CHANGELOG.md  CMakeLists.txt  README.md  install.sh  proxmark3.sh  update.sh
pm3iceman/src/main/cpp/armsrc/: Makefile  aes.c  appmain.c  apps.h  desfire_crypto.c  epa.c  felica.c  flashmem.c  fpgaloader.c  hitag2.c  hitagS.c  iclass.c  iso14443a.c  iso14443b.c  iso15693.c  legicrf.c  legicrf.h  legicrfsim.c  lfops.c  lfsampling.c  mifarecmd.c  mifaredesfire.c  mifaresniff.c  mifareutil.c
pm3iceman/src/main/cpp/armsrc/Standalone/: hf_colin.c  hf_mattyrun.c  hf_young.c  lf_hidbrute.c  lf_proxbrute.c  lf_samyrun.c
pm3iceman/src/main/cpp/client/: cmdanalyse.c  cmddata.c  cmdflashmem.c  cmdhf.c  cmdhf14a.c  cmdhf14b.c  cmdhf15.c  cmdhfemv.c  cmdhfepa.c  cmdhffelica.c  cmdhficlass.c  cmdhflegic.c  cmdhflist.c  cmdhfmf.c  cmdhfmf.h  cmdhfmfdes.c  cmdhfmfdes.h  cmdhfmfdesfire.c  cmdhfmfhard.c  cmdhfmfu.c  cmdhftopaz.c  cmdhw.c  cmdlf.c  cmdlf.h  cmdlfawid.c  cmdlfem4x.c  cmdlffdx.c  cmdlfguard.c  cmdlfhid.c  cmdlfhid.h  cmdlfhitag.c  cmdlfindala.c  cmdlfio.c  cmdlfjablotron.c  cmdlfnedap.c  cmdlfnoralsy.c  cmdlfparadox.c  cmdlfpresco.c  cmdlfpyramid.c  cmdlft55xx.c  (+23 more)
pm3iceman/src/main/cpp/client/emv/: apduinfo.c  cmdemv.c  crypto_polarssl.c  emv_tags.c  emvcore.c  emvcore.h
pm3iceman/src/main/cpp/client/hardnested/: hardnested_bruteforce.c
pm3iceman/src/main/cpp/client/hid-flasher/: proxusb.c  usb_cmd.h
pm3iceman/src/main/cpp/client/loclass/: elite_crack.c  ikeys.c
pm3iceman/src/main/cpp/client/lualibs/: hf_reader.lua  read14a.lua  read14b.lua  utils.lua
pm3iceman/src/main/cpp/client/reveng/: cli.c
pm3iceman/src/main/cpp/client/scripts/: amiibo.lua  emul2dump.lua  formatMifare.lua  legic.lua  tnp3clone.lua
pm3iceman/src/main/cpp/common/: cmd.c  cmd.h  desfire.h  emvtags.h  i2c.c  iso14443crc.c  lfdemod.c  protocols.h  usart.c  usb_cdc.c  usb_cdc.h
pm3iceman/src/main/cpp/fpga/: go.bat
pm3iceman/src/main/cpp/include/: usb_cmd.h
pm3iceman/src/main/cpp/liblua/: lauxlib.c  lobject.h
pm3iceman/src/main/cpp/tools/: at91sam7s512-shikra.cfg  mkversion.pl
pm3iceman/src/main/cpp/tools/nonce2key/: crypto1.c
pm3iceman/src/main/cpp/uart/: uart.h  uart_posix.c  uart_win32.c
pm3iceman/src/main/cpp/zlib/: deflate.c  trees.c  zutil.c
pm3official/src/main/cpp/: CMakeLists.txt
pm3official/src/main/cpp/armsrc/: appmain.c  epa.c  fpgaloader.c  hitag2.c  hitagS.c  i2c.c  iclass.c  iso14443a.c  iso14443b.c  iso15693.c  legicrf.c  legicrfsim.c  lfops.c  mifarecmd.c  mifarecmd.h  mifaresim.c  mifaresniff.c  mifaresniff.h  mifareutil.c  mifareutil.h
pm3official/src/main/cpp/client/: cmddata.c  cmdhf.c  cmdhf.h  cmdhf14a.c  cmdhf14b.c  cmdhf15.c  cmdhfepa.c  cmdhffido.c  cmdhficlass.c  cmdhfmf.c  cmdhfmf.h  cmdhfmfhard.c  cmdhfmfu.c  cmdhftopaz.c  cmdlf.c  cmdlfawid.c  cmdlfem4x.c  cmdlffdx.c  cmdlfhitag.c  cmdlfio.c  cmdlfjablotron.c  cmdlfnoralsy.c  cmdlfparadox.c  cmdlfpcf7931.c  cmdlfpresco.c  cmdlfpyramid.c  cmdlft55xx.c  cmdlft55xx.h  cmdlfviking.c  cmdlfvisa2000.c  cmdmain.c  cmdsmartcard.c  comms.c  comms.h  guidummy.c  mfkey.c  mifarehost.c  pcsc.c  proxguiqt.cpp  proxmark3.c  (+5 more)
pm3official/src/main/cpp/client/cliparser/: argtable3.c
pm3official/src/main/cpp/client/crypto/: asn1dump.c
pm3official/src/main/cpp/client/emv/: apduinfo.c  cmdemv.c  emv_pk.c  emv_tags.c  emvcore.c  emvcore.h  emvjson.c
pm3official/src/main/cpp/client/fido/: cbortools.c  fidocore.c
pm3official/src/main/cpp/client/hardnested/: hardnested_bf_core.c  hardnested_bitarray_core.c  hardnested_bruteforce.c  hardnested_tables.c
pm3official/src/main/cpp/client/hid-flasher/: CMakeLists.txt  flasher.c  proxusb.c  proxusb.h  usb_cmd.h
pm3official/src/main/cpp/client/jansson/: strconv.c
pm3official/src/main/cpp/client/lualibs/: utils.lua
pm3official/src/main/cpp/client/scripts/: brutesim.lua  formatMifare.lua  tnp3clone.lua
pm3official/src/main/cpp/client/tinycbor/: cbor.h  cborencoder.c  cborerrorstrings.c  cborparser.c  cborpretty.c  cborvalidation.c  open_memstream.c
pm3official/src/main/cpp/common/: cmd.c  cmd.h  lfdemod.c  usb_cdc.c  usb_cdc.h
pm3official/src/main/cpp/include/: usb_cmd.h
pm3official/src/main/cpp/tools/: at91sam7s512-jtagkey.cfg
pm3official/src/main/cpp/uart/: uart.h  uart_posix.c  uart_win32.c
pm3official/src/main/cpp/zlib/: trees.c  zlib.h  zutil.c
pn53x/src/main/cpp/: CMakeLists.txt
pn53x/src/main/cpp/check/: CMakeLists.txt  check.c
pn53x/src/main/cpp/emulate/: emulate.c
pn53x/src/main/cpp/hard/: CMakeLists.txt  comp.txt  crypto1_bs_crack.h  solve_piwi.c
pn53x/src/main/cpp/libnfc/: CMakeLists.txt
pn53x/src/main/cpp/libnfc/chips/: pn53x.c
pn53x/src/main/cpp/mfclassic/: CMakeLists.txt  mfclassic.c
pn53x/src/main/cpp/mfcuk/: crypto1.c  mfcuk.c  mfcuk_mifare.c
pn53x/src/main/cpp/mfoc/: mfoc.c
pn53x/src/main/cpp/pn53x/: CMakeLists.txt  test.c
(+1255 files in other folders)
